k8s-specifications/vote-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "vote-ingress"
  namespace: "vote"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: vote-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: "vote-service"
          servicePort: 5000
